language/move-lang/tests/move_check/typing/module_call_explicit_type_arguments.exp
error: 

   ┌── tests/move_check/typing/module_call_explicit_type_arguments.move:2:19 ───
   │  
 2 │       fun foo<T, U>(_x: T, _y: U) {
   │                     -- The parameter '_x' might still contain a resource value. The resource must be consumed before the function returns
   │ ╭─────────────────────────────────^
 3 │ │     }
   │ ╰─────^ Invalid return
   │  

error: 

   ┌── tests/move_check/typing/module_call_explicit_type_arguments.move:2:26 ───
   │  
 2 │       fun foo<T, U>(_x: T, _y: U) {
   │                            -- The parameter '_y' might still contain a resource value. The resource must be consumed before the function returns
   │ ╭─────────────────────────────────^
 3 │ │     }
   │ ╰─────^ Invalid return
   │  

